instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:3: error: not found: type Blue
setCouleurBrosse(c:Blue)
                   ^InstructionsDrawG:3: error: not found: value c
setCouleurBrosse(c:Blue)
                 ^